fixed overflowing bug

--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,6 @@ nav {
 /*---Search page---*/
 
 .search{
-  border: 1px solid magenta;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -508,12 +507,10 @@ nav {
   display: flex;
   height: calc(100vh - 93px);
   justify-content: center;
-  border: 1px solid magenta
 }
 
 
 .search-form {
-  border: 1px solid orange;
   position: relative;
   width: 90%;
   height: fit-content;
@@ -545,6 +542,7 @@ nav {
   border: 1px solid rgb(187, 187, 187);
   box-shadow: -5px 8px 2px 1px rgba(31, 31, 252, 0.219);
   border-radius: 10px;
+  overflow-y: auto;
 }
 
 /* Meal page*/
@@ -746,7 +744,6 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid orangered
 }
 
 .empty-state__image {
